# TinyChatServer

./: CMakeLists.txt  README.md
docs/: MySQL表的设计方式.md  环境配置.md
include/: public.h
include/server/: chatserver.h  chatservice.h  group.h  groupuser.h  user.h
include/server/db/: db.h
include/server/model/: friendmodel.h  groupmodel.h  offlinemsgmodel.h  usermodel.h
src/client/: CMakeLists.txt  client_main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  server_main.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemsgmodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
test/: json.txt  jsontest  jsontest.cpp  muduotest.cpp  time  timetest.cpp
test/CMakeTest/test1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
test/CMakeTest/test2/: CMakeLists.txt  add.cpp  add.h  main.cpp
test/CMakeTest/test3/: CMakeLists.txt  main.cpp
test/CMakeTest/test3/include/: sum.h
test/CMakeTest/test3/src/: sum.cpp
test/singleTonTest/: test  test.cpp
